<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MotorPara" Id="{c9a58fe3-2947-4f72-924f-c7172678e011}">
    <Declaration><![CDATA[TYPE ST_MotorPara :
STRUCT
	fMax : REAL;
	fMin : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>